fixed home page spacing issues

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -377,6 +377,11 @@
     clear:both;
     width:100%;
 }
+.spacer-120{
+    height:120px;
+    clear:both;
+    width:100%;
+}
 .spacer-160{
     height:160px;
     clear:both;
